--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tauri-apps/cli": "^2.5.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/w3c-web-serial": "^1.0.8",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
