--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1",
-    "recharts": "^2.15.3"
+    "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -42,7 +41,6 @@
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite": "^6.3.1"
   }
 }
