--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "build:signed": "pnpm tauri:build && pnpm run sign:win"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/api": "^2.5.0",
