--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@primer/octicons-react": "^19.15.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-table": "^8.21.3",
     "@tauri-apps/api": "^2.5.0",
@@ -37,6 +38,7 @@
     "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
